<resources>
    <string name="app_name" translatable="false">数字兑换机商家版</string>
    <string name="version">1.1</string>
    <string name="scan_text">将二维码/条码放入框内, 即可自动扫描</string>
    <string name="gitee">git</string>
    <string name="giteettt">gitttt</string>
    <string name="laguage">语言</string>

    <string name="lipinkucun">该礼品的最大库存量为</string>
    <string name="kucun">库存：</string>
    <string name="dhbie">所需币额：</string>
    <string name="saomiao">扫描</string>
    <string name="duihuan" translatable="false">兑换</string>
    <string name="rengoutj">认购提交</string>
    <string name="recharge">充值</string>
    <string name="shoukuan">收款</string>
    <string name="zhuanzhang">转账</string>
    <string name="vipcard">会员卡号</string>
    <string name="vipname">会员姓名</string>
    <string name="fkcurr">付款币种</string>
    <string name="accountyue">账户余额</string>
    <string name="dhcurr">兑换币种</string>
    <string name="dhmoney">兑换金额</string>
    <string name="curhuilv">当前汇率</string>
    <string name="shouxufei">手续费</string>
    <string name="xumoney">所需金额</string>
    <string name="czmoney">充值金额</string>
    <string name="paytype">支付方式</string>
    <string name="vipyue">会员余额</string>
    <string name="czcurr">充值币种</string>
    <string name="zzcurr">转账币种</string>
    <string name="zzzhidian">转账指点</string>
    <string name="skhuming">收款户名</string>
    <string name="curr">币&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;种</string>
    <string name="cunqi">存&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;期</string>
    <string name="lilv">利&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;率</string>
    <string name="cunmoney">存入金额</string>
    <string name="inputcunmoney">请输入存入金额</string>
    <string name="inputcunzhidian">请输入存入指点</string>
    <string name="inputskhuming">请输入收款户名</string>
    <string name="inputskaccount">请输入收款账号</string>
    <string name="skaccount">收款账号</string>
    <string name="zzmoney">转账金额</string>
    <string name="zzremark">转账备注</string>
    <string name="inputzzmoney">请输入转账金额</string>
    <string name="inputzzzhidian">请输入转账指点</string>
    <string name="inputzzremark">请输入转账备注</string>
    <string name="internet">请检查网络是否可用</string>
    <string name="pwdno">密码错误</string>
    <string name="paytypeno">获取支付方式失败</string>
    <string name="currno">获取货币种类失败</string>
    <string name="cunqifalse">获取存期失败</string>
    <string name="currno_chose">获取货币种类失败,请返回重试</string>
    <string name="inputvip">请输入会员卡号</string>
    <string name="inputmoney">请输入充值金额</string>
    <string name="chosecurr">请选择充值币种</string>
    <string name="chosezzcurr">请选择转账币种</string>
    <string name="chosezzzhidian">请选择转账指点</string>
    <string name="chosezhidian">请选择指点</string>
    <string name="chosefkzd">请选择付款指点</string>
    <string name="chosedyzd">请选择抵押指点</string>
    <string name="chosedkqx">请选择贷款期限</string>
    <string name="chosedkcurr">请选择贷款币种</string>
    <string name="rechargefalse">充值失败</string>
    <string name="zdxffalse">指点消费失败</string>
    <string name="zdrgfalse">指点认购失败</string>
    <string name="zddhfalse">指点兑换失败</string>
    <string name="zddkfalse">指点贷款失败</string>
    <string name="zdlistfalse">获取指点种类失败</string>
    <string name="zzzdlistfalse">获取转账指点失败</string>
    <string name="yuefalse">获取账户余额失败</string>
    <string name="zdrgflfalse">获取指点认购费率失败</string>
    <string name="zddklilvfalse">获取贷款利率失败</string>
    <string name="inputaccount">请输入账号</string>
    <string name="inputpwd">请输入密码</string>
    <string name="rememberpwd">记住密码</string>
    <string name="login">登录</string>
    <string name="loginfalse">登录失败，请重新登录</string>
    <string name="chose">请选择</string>
    <string name="skfalse">收款失败</string>
    <string name="chosefkcurr">请选择付款币种</string>
    <string name="chosecunqi">请选择存期</string>
    <string name="chosedhcurr">请选择兑换币种</string>
    <string name="chosedhzhidian">请选择兑换指点</string>
    <string name="chosergzhidian">请选择认购指点</string>
    <string name="huilvfalse">获取兑换汇率失败</string>
    <string name="rgflfalse">获取认购费率失败</string>
    <string name="fabiduhuifalse">法币兑换失败</string>
    <string name="fabidingcunfalse">法币定存失败</string>
    <string name="zhidiandingcunfalse">指点定存失败</string>
    <string name="vipmsgfalse">请先获取正确的用户信息</string>
    <string name="inputduihuanmoney">请输入兑换金额</string>
    <string name="inputduihuannum">请输入兑换数量</string>
    <string name="inputrengounum">请输入认购数量</string>
    <string name="zzbigyue">转账金额大于账户余额</string>
    <string name="dhbigyue">兑换金额大于账户余额</string>
    <string name="dydianebigyue">抵押点额大于账户余额</string>
    <string name="txbigyue">提现金额大于账户余额</string>
    <string name="xfzdbigyue">消费指点大于账户余额</string>
    <string name="czcodefalse">获取充值编号失败</string>
    <string name="zzcodefalse">获取转账编号失败</string>
    <string name="dhcodefalse">获取兑换编号失败</string>
    <string name="zdxfcodefalse">获取指点消费编号失败</string>
    <string name="zddccodefalse">获取指点定存编号失败</string>
    <string name="zdrgcodefalse">获取指点认购编号失败</string>
    <string name="zddkcodefalse">获取指点贷款编号失败</string>
    <string name="dccodefalse">获取定存编号失败</string>
    <string name="zddhcodefalse">获取指点兑换编号失败</string>
    <string name="dhshopmsgfalse">获取兑换商品信息失败</string>
    <string name="qxcodefalse">获取取现编号失败</string>
    <string name="fabizzfalse">法币转账失败</string>
    <string name="zhidianzzfalse">指点转账失败</string>
    <string name="lilvfalse">获取利率失败，请稍后</string>
    <string name="smalldcmoney">小于最小定存金额</string>
    <string name="smalldzhidian">小于最小定存指点</string>
    <string name="countryfalse">获取国家列表失败</string>
    <string name="sxffalse">获取手续费失败</string>
    <string name="idtypefalse">获取证件类型失败</string>
    <string name="fabitxfalse">法币提现失败</string>
    <string name="dingcuntijiao">定存提交</string>
    <string name="country">国&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;家</string>
    <string name="bankname">银行名称</string>
    <string name="inputbankname">请输入银行名称</string>
    <string name="fenhang">分&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;行</string>
    <string name="zhihang">支&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;行</string>
    <string name="accountname">账户名称</string>
    <string name="bankaccount">银行账号</string>
    <string name="idtype">证件类型</string>
    <string name="idnum">证件号码</string>
    <string name="phone">手机号码</string>
    <string name="txmoney">提现金额</string>
    <string name="txtijiao">取现提交</string>
    <string name="inputtxmoney">请输入提现金额</string>
    <string name="inputaccountname">请输入账户名称</string>
    <string name="inputbankaccount">请输入银行账号</string>
    <string name="fkzhidian">付款指点</string>
    <string name="xfzhidian">消费指点</string>
    <string name="inputxfzhidian">请输入消费指点</string>
    <string name="confirm">确定</string>
    <string name="dhzhidian">兑换指点</string>
    <string name="rgzhidian">认购指点</string>
    <string name="dhnum">兑换数量</string>
    <string name="rgnum">认购数量</string>
    <string name="dhlv">兑换率</string>
    <string name="rgfl">认购费率</string>
    <string name="dycurr">抵押币种</string>
    <string name="dyzhidian">抵押指点</string>
    <string name="dkqixian">贷款期限</string>
    <string name="dkcurr">贷款币种</string>
    <string name="dydiane">抵押点额</string>
    <string name="dkmoney">贷款金额</string>
    <string name="monthhk">月还款</string>
    <string name="dktijiao">贷款提交</string>
    <string name="inputdydiane">请输入抵押点额</string>
    <string name="chosecountry">请选择国家</string>
    <string name="inputjiaoyi">请输入交易密码</string>
    <string name="zhidian">指点</string>
    <string name="dczhidian">定存指点</string>
    <string name="cunruzhidian">存入指点</string>
    <string name="lipincode">商品编号</string>
    <string name="inputlipincode">请输入或定位商品编号</string>
    <string name="dingwei">定位</string>
    <string name="duihuanallnum">兑换总数量：</string>
    <string name="duihuanallmoney">兑换总指点额：</string>
    <string name="lipinlistfalse">获取可兑换礼品失败</string>
    <string name="choselipin">请选择兑换礼品</string>
    <string name="lipinnumbigkucun">礼品数量大于礼品库存</string>
    <string name="xiaofeitype">消费类型</string>
    <string name="xiaofeimoney">消费金额</string>
    <string name="inputxfmoney">请输入消费金额</string>
    <string name="comfirmpay">确认支付</string>
    <string name="chosexftype">请选择消费类型</string>
    <string name="chosexfzhima">请选择消费指码</string>
    <string name="xftypeno_chose">获取消费类型失败,请返回重试</string>
    <string name="xiaofeizhima">消费指码</string>
    <string name="xfmoneybigyue">消费金额大于账户余额</string>
    <string name="numzican">数字资产</string>
    <string name="zmlistfalse">获取消费指码失败</string>
</resources>
