<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backgroudcolor"
                android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/balance_rl_d"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        >

        <TextView
            android:id="@+id/balance_tv_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/duihuanallnum"
            android:textColor="@color/text_30"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/tv_allnum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_toRightOf="@id/balance_tv_n"
            android:text="0"
            android:textColor="@color/theme_red"
            android:textSize="13sp"
            />

        <TextView
            android:id="@+id/balance_tv_z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@id/tv_allnum"
            android:text="@string/duihuanallmoney"
            android:textColor="@color/text_30"
            android:textSize="12sp"
            />

        <TextView
            android:id="@+id/tv_allmoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/balance_tv_z"
            android:text="0"
            android:textColor="@color/theme_red"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:id="@+id/rl_duihuan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="8dp"
            android:background="@color/theme_red"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/duihuan"
                android:textColor="@color/white"
                android:textSize="15sp"
                />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include layout="@layout/title_twoicon_back"></include>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/vip_tv_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/vipcard"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/vip_et_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/vip_tv_card"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:textColor="@color/text_30"
                android:textSize="13sp"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/viewcolor"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/vipname"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/vip_tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/viewcolor"></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/tv_bizhong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/fkzhidian"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />

            <RelativeLayout
                android:id="@+id/rl_currchose"
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/shap_downchose"
                >

                <TextView
                    android:id="@+id/et_bingzhong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/chose"
                    android:textColor="@color/text_30"
                    android:textSize="13sp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/button_down"

                    />
            </RelativeLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/viewcolor"
            ></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/tv_yue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/accountyue"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/et_yue"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/tv_yue"
                android:gravity="center_vertical|right"
                android:paddingLeft="10dp"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/viewcolor"
            ></View>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            >

            <TextView
                android:id="@+id/vip_tv_jifennum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/lipincode"
                android:textColor="@color/text_30"
                android:textSize="15sp"
                />

            <TextView
                android:id="@+id/vip_tv_dingwei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:background="@color/theme_red"
                android:paddingBottom="3dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="3dp"
                android:text="@string/dingwei"
                android:textColor="@color/white"
                android:textSize="13sp"
                />

            <EditText
                android:id="@+id/vip_et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toLeftOf="@id/vip_tv_dingwei"
                android:layout_toRightOf="@id/vip_tv_jifennum"
                android:background="@null"
                android:gravity="center_vertical|right"
                android:hint="@string/inputlipincode"
                android:textColor="@color/text_30"
                android:textSize="13sp"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/viewcolor"></View>

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="5dp"
            android:cacheColorHint="#00000000"
            android:divider="@color/viewcolor"
            android:dividerHeight="0.5dp"
            android:scrollbars="none"
            ></ListView>

    </LinearLayout>
</RelativeLayout>